--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.5.2
+cachetools==5.2.0
 certifi==2022.9.14
 cffi==1.15.1
 charset-normalizer==2.1.1
@@ -10,15 +11,20 @@ django-allauth==0.51.0
 django-excel-base==1.0.4
 django-excel-response2==3.0.2
 django-six==1.0.4
+google-auth==2.11.0
 idna==3.4
 oauthlib==3.2.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
 PyJWT==2.4.0
 python3-openid==3.2.0
 pytz==2022.2.1
 requests==2.28.1
 requests-oauthlib==1.3.1
+rsa==4.9
 screen==1.0.1
+six==1.16.0
 sqlparse==0.4.2
 urllib3==1.26.12
 xlwt==1.3.0
